tests/negative/type_class_private_access.uzpp
// XATOLIK_KUTILMOQDA: cpp_level: yopiq maydonga tashqaridan kirish
ulash "uzpp_runtime.hpp"
sinf Hisob {
yopiq:
    butun balans = 100;
};
butun asosiy() {
    Hisob h;
    yozish << h.balans << qator_oxiri;
    qaytarish 0;
}
